--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
                 6.9M views . 6 days ago</p>
                 </div></div>
 
-                <div><img src = ".\img\oxlade.webp">
+                <div><img src = ".\oxlade.webp">
                     <div>
-                      <img src = ".\img\ox.jpg" style =
+                      <img src = ".\\ox.jpg" style =
                       "border:50%; width:35px; height:35px;
                       float:left;margin-right: 5px;">
                     <h12  style = "font-size:15px;">Oxlade - common <br>
@@ -88,9 +88,9 @@
                     6.9M views . 6 days ago</p>
                 </div></div>
 
-                <div><img src = ".\img\wandecoal.webp">
+                <div><img src = ".\wandecoal.webp">
                     <div>
-                      <img src = ".\img\wande.jpg" style =
+                      <img src = ".\wande.jpg" style =
                       "border:50%; width:35px; height:35px;
                       float:left;margin-right: 5px;">
                     <h12  style = "font-size:15px;">Wande Coal & Olamide
@@ -101,9 +101,9 @@
                     1.5M views . 5 days ago</p>
                 </div></div>
                 
-                <div><img src = ".\img\avatar.webp">
+                <div><img src = ".\avatar.webp">
                     <div>
-                      <img src = ".\img\avatarshort.jpg" style =
+                      <img src = ".\avatarshort.jpg" style =
                       "border:50%; width:35px; height:35px;
                       float:left;margin-right: 5px;">
                     <h12  style = "font-size:15px;">Avatar - common <br>
@@ -112,9 +112,9 @@
                     <p>Avatar</br>
                     6.9M views . 6 days ago</p>
                 </div></div>
-                <div><img src = ".\img\bayu.webp">
+                <div><img src = ".\bayu.webp">
                     <div>
-                      <img src = ".\img\bay.jpg" style =
+                      <img src = ".\bay.jpg" style =
                       "border:50%; width:35px; height:35px;
                       float:left;margin-right: 5px;">
                     <h12  style = "font-size:15px;">Bayu - common <br>
@@ -124,9 +124,9 @@
                     6.9M views . 6 days ago</p>
                 </div></div>
 
-                <div><img src = ".\img\blackbones.webp">
+                <div><img src = ".\blackbones.webp">
                     <div>
-                      <img src = ".\img\blaq.jpg" style =
+                      <img src = ".\blaq.jpg" style =
                       "border:50%; width:35px; height:35px;
                       float:left;margin-right: 5px;">
                     <h12  style = "font-size:15px;">Blaqbonez- Breaking
@@ -137,9 +137,9 @@
                     3.9M views . 4 days ago</p>
                 </div></div>
 
-                <div><img src = ".\img\brain.webp">
+                <div><img src = ".\brain.webp">
                     <div>
-                      <img src = ".\img\brainshot.jpg" style =
+                      <img src = ".\brainshot.jpg" style =
                       "border:50%; width:35px; height:35px;
                       float:left;margin-right: 5px;">
                     <h12  style = "font-size:15px;">Brain Jotter - common <br>
@@ -149,9 +149,9 @@
                     6.9M views . 6 days ago</p>
                 </div></div>
 
-                <div><img src = ".\img\yemialde.webp">
+                <div><img src = ".\yemialde.webp">
                     <div>
-                      <img src = ".\img\yemi.jpg" style =
+                      <img src = ".\yemi.jpg" style =
                       "border:50%; width:35px; height:35px;
                       float:left;margin-right: 5px;">
                     <h12  style = "font-size:15px;">Yemi Alade - 
