--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
      <div class ="container">
         <div class ="firstrow">
             <div class ="menu"><span class ="material-symbols-outlined">menu</span></div>
-            <div class ="logo"><img src = ".\img\th.jfif" style= "width:50%;height:50%"></div>
+            <div class ="logo"><img src = ".\th.jfif" style= "width:50%;height:50%"></div>
             <div class ="searchinput"><input type = "search" placeholder="search">
                 <span class="material-symbols-outlined search">search</span>
                 <button type = "submit" class="searchbutton" >
@@ -64,9 +64,9 @@
            </div> 
 
         <div class = "thirdrow">
-            <div><img src = ".\img\burnaboy.webp">
+            <div><img src = ".\burnaboy.webp">
                 <div>
-                  <img src = ".\img\burna.jpg" style =
+                  <img src = ".\burna.jpg" style =
                   "border:50%; width:35px; height:35px;
                   float:left;margin-right: 5px;">
                 <h12  style = "font-size:15px;">Burna Boy - common <br>
@@ -78,7 +78,7 @@
 
                 <div><img src = ".\oxlade.webp">
                     <div>
-                      <img src = ".\\ox.jpg" style =
+                      <img src = ".\ox.jpg" style =
                       "border:50%; width:35px; height:35px;
                       float:left;margin-right: 5px;">
                     <h12  style = "font-size:15px;">Oxlade - common <br>
